fix: css spacing

--- a/src/app/pages/questions/components/question/question.component.scss
+++ b/src/app/pages/questions/components/question/question.component.scss
@@ -44,7 +44,8 @@ question {
 
   .input-scroll {
     overflow-y: auto !important;
-    mask-image: linear-gradient(to top, transparent 3%, black 7%),
+    mask-image:
+      linear-gradient(to top, transparent 3%, black 7%),
       linear-gradient(to bottom, transparent 0%, black 7%);
     mask-size: 100% 50%, 100% 51%;
     mask-position: bottom, top;
